--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node app.js",
     "test": "mocha ./tests/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
-
   },
   "repository": {
     "type": "git",
@@ -25,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.7"
   },
